[gd_scene load_steps=3 format=3 uid="uid://quest_log_dialog"]

[ext_resource type="Theme" uid="uid://b7w5k8j6x2q1a" path="res://resources/ui_theme.tres" id="1"]
[ext_resource type="Script" path="res://scripts/ui/QuestLogDialog.gd" id="2"]

[node name="QuestLogDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleBar" type="HBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Title" type="Label" parent="Background/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quest Log"

[node name="CloseButton" type="Button" parent="Background/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[node name="TabBar" type="TabBar" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
tab_count = 2
tab_0/title = "Active Quests"
tab_1/title = "Completed Quests"

[node name="QuestContent" type="VBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_horizontal = 3
custom_minimum_size = Vector2(550, 350)

[node name="ScrollContainer" type="ScrollContainer" parent="Background/VBoxContainer/QuestContent"]
layout_mode = 2
size_flags_vertical = 3
size_flags_horizontal = 3

[node name="QuestList" type="VBoxContainer" parent="Background/VBoxContainer/QuestContent/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EmptyLabel" type="Label" parent="Background/VBoxContainer/QuestContent"]
layout_mode = 2
text = "No quests available."
horizontal_alignment = 1
vertical_alignment = 1
size_flags_vertical = 3

[connection signal="pressed" from="Background/VBoxContainer/TitleBar/CloseButton" to="." method="_on_close_pressed"]
[connection signal="tab_changed" from="Background/VBoxContainer/TabBar" to="." method="_on_tab_changed"]
